add mongo_repository.go to chat service and some refactoring
